--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,9 @@
     "license": "ISC",
     "dependencies": {
         "cheerio": "^1.0.0-rc.3",
+        "moment": "^2.26.0",
+        "moment-business-days": "^1.2.0",
+        "mongoose": "^5.9.15",
         "prettier": "^2.0.5",
         "superagent": "^5.2.2"
     }
